# tokvec

./: .gitignore  README.md  pyproject.toml  run.sh  train.py  visualize.py
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-03-13-vectorize-gradient-accumulation-design.md
logs/: metrics.csv
logs/20260313_192800/: metrics.csv
src/: data.py  evaluate.py  model.py  negative_sampling.py
tests/: test_benchmark_gradients.py  test_data.py  test_evaluate.py  test_gradients.py  test_integration.py  test_negative_sampling.py
