[project]
name = "word2vec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "torch>=2.0"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests (excluded by default)",
]
addopts = "-m 'not benchmark'"

[tool.uv]
dev-dependencies = ["pytest>=7", "torch>=2.0"]
